--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -56,7 +56,7 @@
 ;; Processor type -- this attribute must exactly match the processor_type
 ;; enumeration in rs6000.h.
 
-(define_attr "cpu" "rios1,rios2,rs64a,mpccore,ppc403,ppc405,ppc601,ppc603,ppc604,ppc604e,ppc620,ppc630,ppc750,ppc7400,ppc7450"
+(define_attr "cpu" "rios1,rios2,rs64a,mpccore,ppc403,ppc405,ppc601,ppc603,ppc604,ppc604e,ppc620,ppc630,ppc750,ppc7400,ppc7450,power4"
   (const (symbol_ref "rs6000_cpu_attr")))
 
 ; (define_function_unit NAME MULTIPLICITY SIMULTANEITY
@@ -375,42 +375,52 @@
   (and (eq_attr "type" "cr_logical")
        (eq_attr "cpu" "ppc7450"))
   1 1)
+
 (define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "vecsimple")
        (eq_attr "cpu" "ppc7450"))
   1 2 [(eq_attr "type" "vecsimple")])
+
 (define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "vecsimple")
        (eq_attr "cpu" "ppc7450"))
   1 1 [(eq_attr "type" "!vecsimple")])
+
 (define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "veccomplex")
        (eq_attr "cpu" "ppc7450"))
   4 2 [(eq_attr "type" "veccomplex")])
+
 (define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "veccomplex")
        (eq_attr "cpu" "ppc7450"))
   4 1 [(eq_attr "type" "!veccomplex")])
+
 (define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "veccmp")
        (eq_attr "cpu" "ppc7450"))
   2 2 [(eq_attr "type" "veccmp")])
+
 (define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "veccmp")
        (eq_attr "cpu" "ppc7450"))
   2 1 [(eq_attr "type" "!veccmp")])
+
 (define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "vecfloat")
        (eq_attr "cpu" "ppc7450"))
   4 2 [(eq_attr "type" "vecfloat")])
+
 (define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "vecfloat")
        (eq_attr "cpu" "ppc7450"))
   4 1 [(eq_attr "type" "!vecfloat")])
+
 (define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "vecperm")
        (eq_attr "cpu" "ppc7450"))
   2 2 [(eq_attr "type" "vecperm")])
+
 (define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "vecperm")
        (eq_attr "cpu" "ppc7450"))
@@ -489,7 +499,7 @@
 
 (define_function_unit "iu" 1 0
   (and (eq_attr "type" "compare,delayed_compare")
-       (eq_attr "cpu" "rs64a,mpccore,ppc403,ppc405,ppc601,ppc603,ppc604,ppc604e,ppc620,ppc630"))
+       (eq_attr "cpu" "rs64a,mpccore,ppc403,ppc405,ppc601,ppc603"))
   3 1)
 
 ; some extra cycles added by TARGET_SCHED_ADJUST_COST between compare
@@ -699,22 +709,12 @@
 
 ; RIOS2 has two symmetric FPUs.
 (define_function_unit "fpu2" 2 0
-  (and (eq_attr "type" "fp")
+  (and (eq_attr "type" "fp,dmul")
        (eq_attr "cpu" "rios2"))
   2 1)
 
 (define_function_unit "fpu2" 2 0
-  (and (eq_attr "type" "fp")
-       (eq_attr "cpu" "ppc630"))
-  3 1)
-
-(define_function_unit "fpu2" 2 0
-  (and (eq_attr "type" "dmul")
-       (eq_attr "cpu" "rios2"))
-  2 1)
-
-(define_function_unit "fpu2" 2 0
-  (and (eq_attr "type" "dmul")
+  (and (eq_attr "type" "fp,dmul")
        (eq_attr "cpu" "ppc630"))
   3 1)
 
@@ -747,6 +747,107 @@
   (and (eq_attr "type" "dsqrt")
        (eq_attr "cpu" "ppc630"))
   26 26)
+
+;; Power4
+(define_function_unit "lsu2" 2 0
+  (and (eq_attr "type" "load")
+       (eq_attr "cpu" "power4"))
+  3 1)
+
+(define_function_unit "lsu2" 2 0
+  (and (eq_attr "type" "fpload")
+       (eq_attr "cpu" "power4"))
+  5 1)
+
+(define_function_unit "lsu2" 2 0
+  (and (eq_attr "type" "store,fpstore")
+       (eq_attr "cpu" "power4"))
+  1 1)
+
+(define_function_unit "iu2" 2 0
+  (and (eq_attr "type" "integer")
+       (eq_attr "cpu" "power4"))
+  2 1)
+
+(define_function_unit "iu2" 2 0
+  (and (eq_attr "type" "imul,lmul")
+       (eq_attr "cpu" "power4"))
+  7 6)
+
+(define_function_unit "iu2" 2 0
+  (and (eq_attr "type" "imul2")
+       (eq_attr "cpu" "power4"))
+  5 4)
+
+(define_function_unit "iu2" 2 0
+  (and (eq_attr "type" "imul3")
+       (eq_attr "cpu" "power4"))
+  4 3)
+
+(define_function_unit "iu2" 2 0
+  (and (eq_attr "type" "idiv")
+       (eq_attr "cpu" "power4"))
+  36 35)
+
+(define_function_unit "iu2" 2 0
+  (and (eq_attr "type" "ldiv")
+       (eq_attr "cpu" "power4"))
+  68 67)
+
+(define_function_unit "imuldiv" 1 0
+  (and (eq_attr "type" "idiv")
+       (eq_attr "cpu" "power4"))
+  36 35)
+
+(define_function_unit "imuldiv" 1 0
+  (and (eq_attr "type" "ldiv")
+       (eq_attr "cpu" "power4"))
+  68 67)
+
+(define_function_unit "iu2" 2 0
+  (and (eq_attr "type" "compare,delayed_compare")
+       (eq_attr "cpu" "power4"))
+  2 1)
+
+(define_function_unit "iu2" 2 0
+  (and (eq_attr "type" "mtjmpr")
+       (eq_attr "cpu" "power4"))
+  3 1)
+
+(define_function_unit "bpu" 1 0
+  (and (eq_attr "type" "mtjmpr")
+       (eq_attr "cpu" "power4"))
+  3 1)
+
+(define_function_unit "bpu" 1 0
+  (and (eq_attr "type" "jmpreg,branch")
+       (eq_attr "cpu" "power4"))
+  2 1)
+
+(define_function_unit "cru" 1 0
+  (and (eq_attr "type" "cr_logical")
+       (eq_attr "cpu" "power4"))
+  4 1)
+
+(define_function_unit "fpu2" 2 0
+  (and (eq_attr "type" "fp,dmul")
+       (eq_attr "cpu" "power4"))
+  6 1)
+
+(define_function_unit "fpu2" 2 0
+  (and (eq_attr "type" "fpcompare")
+       (eq_attr "cpu" "power4"))
+  8 2)
+
+(define_function_unit "fpu2" 2 0
+  (and (eq_attr "type" "sdiv,ddiv")
+       (eq_attr "cpu" "power4"))
+  33 28)
+
+(define_function_unit "fpu2" 2 0
+  (and (eq_attr "type" "ssqrt,dsqrt")
+       (eq_attr "cpu" "power4"))
+  40 35)
 
 
 ;; Start with fixed-point load and store insns.  Here we put only the more
@@ -7778,7 +7879,7 @@
    mr %0,%1
    {l%U1%X1|lwz%U1%X1} %0,%1
    {st%U0%U1|stw%U0%U1} %1,%0"
-  [(set_attr "type" "*,*,*,compare,*,*,load,store")
+  [(set_attr "type" "cr_logical,cr_logical,cr_logical,cr_logical,cr_logical,*,load,store")
    (set_attr "length" "*,*,12,*,8,*,*,*")])
 
 ;; For floating-point, we normally deal with the floating-point registers
@@ -10585,7 +10686,8 @@
 			    (const_int 0)]))]
   ""
   "%D1mfcr %0\;{rlinm|rlwinm} %0,%0,%J1,1"
-  [(set_attr "length" "12")])
+  [(set_attr "type" "cr_logical")
+   (set_attr "length" "12")])
 
 (define_insn ""
   [(set (match_operand:DI 0 "gpc_reg_operand" "=r")
@@ -10594,7 +10696,8 @@
 			    (const_int 0)]))]
   "TARGET_POWERPC64"
   "%D1mfcr %0\;{rlinm|rlwinm} %0,%0,%J1,1"
-  [(set_attr "length" "12")])
+  [(set_attr "type" "cr_logical")
+   (set_attr "length" "12")])
 
 (define_insn ""
   [(set (match_operand:CC 0 "cc_reg_operand" "=x,?y")
@@ -10650,7 +10753,8 @@
 
   return \"%D1mfcr %0\;{rlinm|rlwinm} %0,%0,%4,%5,%5\";
 }"
- [(set_attr "length" "12")])
+  [(set_attr "type" "cr_logical")
+   (set_attr "length" "12")])
 
 (define_insn ""
   [(set (match_operand:CC 0 "cc_reg_operand" "=x,?y")
@@ -10719,9 +10823,10 @@
 	(match_operator:SI 4 "scc_comparison_operator"
 			   [(match_operand 5 "cc_reg_operand" "y")
 			    (const_int 0)]))]
-   "REGNO (operands[2]) != REGNO (operands[5])"
-   "%D1%D4mfcr %3\;{rlinm|rlwinm} %0,%3,%J1,1\;{rlinm|rlwinm} %3,%3,%J4,1"
-   [(set_attr "length" "20")])
+  "REGNO (operands[2]) != REGNO (operands[5])"
+  "%D1%D4mfcr %3\;{rlinm|rlwinm} %0,%3,%J1,1\;{rlinm|rlwinm} %3,%3,%J4,1"
+  [(set_attr "type" "cr_logical")
+   (set_attr "length" "20")])
 
 (define_peephole
   [(set (match_operand:DI 0 "gpc_reg_operand" "=r")
@@ -10732,9 +10837,10 @@
 	(match_operator:DI 4 "scc_comparison_operator"
 			   [(match_operand 5 "cc_reg_operand" "y")
 			    (const_int 0)]))]
-   "TARGET_POWERPC64 && REGNO (operands[2]) != REGNO (operands[5])"
-   "%D1%D4mfcr %3\;{rlinm|rlwinm} %0,%3,%J1,1\;{rlinm|rlwinm} %3,%3,%J4,1"
-   [(set_attr "length" "20")])
+  "TARGET_POWERPC64 && REGNO (operands[2]) != REGNO (operands[5])"
+  "%D1%D4mfcr %3\;{rlinm|rlwinm} %0,%3,%J1,1\;{rlinm|rlwinm} %3,%3,%J4,1"
+  [(set_attr "type" "cr_logical")
+   (set_attr "length" "20")])
 
 ;; There are some scc insns that can be done directly, without a compare.
 ;; These are faster because they don't involve the communications between
@@ -13727,7 +13833,8 @@
         (unspec:SI [(reg:CC 68) (reg:CC 69) (reg:CC 70) (reg:CC 71) 
 		    (reg:CC 72)	(reg:CC 73) (reg:CC 74) (reg:CC 75)] 19))]
   ""
-  "mfcr %0")
+  "mfcr %0"
+  [(set_attr "type" "cr_logical")])
 
 (define_insn "*stmw"
  [(match_parallel 0 "stmw_operation"
@@ -13799,17 +13906,19 @@
     mask |= INTVAL (XVECEXP (SET_SRC (XVECEXP (operands[0], 0, i)), 0, 1));
   operands[4] = GEN_INT (mask);
   return \"mtcrf %4,%2\";
-}")
+}"
+  [(set_attr "type" "cr_logical")])
 
 (define_insn ""
- [(set (match_operand:CC 0 "cc_reg_operand" "=y")
-       (unspec:CC [(match_operand:SI 1 "gpc_reg_operand" "r")
-		   (match_operand 2 "immediate_operand" "n")] 20))]
- "GET_CODE (operands[0]) == REG 
-  && CR_REGNO_P (REGNO (operands[0]))
-  && GET_CODE (operands[2]) == CONST_INT
-  && INTVAL (operands[2]) == 1 << (75 - REGNO (operands[0]))"
- "mtcrf %R0,%1")
+  [(set (match_operand:CC 0 "cc_reg_operand" "=y")
+        (unspec:CC [(match_operand:SI 1 "gpc_reg_operand" "r")
+		    (match_operand 2 "immediate_operand" "n")] 20))]
+  "GET_CODE (operands[0]) == REG 
+   && CR_REGNO_P (REGNO (operands[0]))
+   && GET_CODE (operands[2]) == CONST_INT
+   && INTVAL (operands[2]) == 1 << (75 - REGNO (operands[0]))"
+  "mtcrf %R0,%1"
+  [(set_attr "type" "cr_logical")])
 
 ; The load-multiple instructions have similar properties.
 ; Note that "load_multiple" is a name known to the machine-independent
