Doc fixes for treelang, in gcc/doc directory.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54415 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,17 @@
+2002-06-10  Tim Josling  <tej@melbpc.org.au>
+ 
+         First steps to making treelang documentation compliant, based on
+	 instructions in sourcebuild.texi. Also add to gcc.c list of
+	 default languages.
+	
+	* doc/contrib.texi: Add self as contributor of treelang.
+
+	* doc/frontends.texi: Add mention of treelang.
+
+	* doc/invoke.texi (Overall Options): Add mention of treelang.
+
+	* doc/standards.texi:  Add mention of treelang.
+
 2002-06-09  Hans-Peter Nilsson  <hp@axis.com>
 
 	* config/cris/cris.c: Include ggc.h
