--- a/gcc/doc/standards.texi
+++ b/gcc/doc/standards.texi
@@ -167,6 +167,13 @@ recent version, while @uref{http://www.toodarkpark.org/computers/objc/}
 is an older example.  @uref{http://www.gnustep.org} includes useful
 information as well.
 
+@cindex treelang
+There is no standard for treelang, which is a sample language front end
+for GCC. Its only purpose is as a sample for people wishing to write a
+new language for GCC. The language is documented in
+@file{gcc/treelang/treelang.texi} which can be turned into info or
+HTML format.
+
 @xref{Top, GNAT Reference Manual, About This Guide, gnat_rm,
 GNAT Reference Manual}, for information on standard
 conformance and compatibility of the Ada compiler.
