Fixes to make treelang worg with PCH gengtype.c changes.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54425 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-06-10  Tim Josling  <tej@melbpc.org.au>
+
+	* gengtype.c (unnamed enum containing BASE_FILE_*): Add languages
+	TREELANG and COBOL.
+	(lang_names): Add treelang and cobol.
+	(get_file_basename): Add code to support treelang and cobol as
+	4th and 5th users of c-common.c.
+
 2002-06-09  Geoffrey Keating  <geoffk@redhat.com>
 
 	* Makefile.in (install-driver): Install driver as
