Don't use RTL inlining. Fix for PR java/6820. 	* lang.c (LANG_HOOKS_POST_OPTIONS): Define. 	(flag_really_inline): New. 	(java_decode_option): Set flag_really_inline if -finline-functions 	is seen. 	(java_post_options): New function. Turn off inlining unless 	flag_really_inline is set.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54430 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,5 +1,15 @@
 2002-06-10  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
+	Don't use RTL inlining. Fix for PR java/6820.
+	* lang.c (LANG_HOOKS_POST_OPTIONS): Define.
+	(flag_really_inline): New.
+	(java_decode_option): Set flag_really_inline if -finline-functions
+	is seen.
+	(java_post_options): New function. Turn off inlining unless
+	flag_really_inline is set.
+
+2002-06-10  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
 	* gjavah.c (throwable_p): Accept argument as either a classname or 
 	signature fragment. Create null-terminated classname string for super
 	when calling itself recursively.
