--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-10  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gcc.c (process_command): Avoid assignment to read-only location.
+	Fix sizeof calculation.
+
 2002-06-10  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cpphash.h (struct cpp_macro): Put comments on their own lines.
