--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-10  Daniel Berlin  <dberlin@dberlin.org>
+	
+	* Makefile.in (ssa.o): Add dependency on $(RTL_H), which was missing.
+
 2002-06-10  Richard Sandiford  <rsandifo@redhat.com>
 
 	* gcc.c (process_command): Avoid assignment to read-only location.
